--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,16 @@ html {
   font-family: Helvetica;
 }
 
-.main-banner {
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+a {
+  font-size: 18px;
+}
+
+.main-banner, .sub-banner {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  color: white;
 }
