--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,11 +8,32 @@ h1 {
   font-weight: bold;
 }
 
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
 a {
   font-size: 18px;
+}
+
+p {
+  font-size: 14px;
 }
 
 .main-banner, .sub-banner {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   color: white;
+}
+
+.footer {
+  text-align: left;
+  color: white;
+  background-color: dimgray;
+  font-size: 11px;
 }
