--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,17 +18,21 @@ h3 {
   font-weight: bold;
 }
 
-a {
-  font-size: 18px;
-}
-
 p {
   font-size: 14px;
+}
+
+a {
+  font-size: 18px;
 }
 
 .main-banner, .sub-banner {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   color: white;
+}
+
+.main-banner p {
+  font-size: 18px;
 }
 
 .footer {
