--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,6 +29,7 @@ a {
 .main-banner, .sub-banner {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   color: white;
+  background-size: cover;
 }
 
 .main-banner p {
